--- a/src/Gh/GuestbookBundle/Resources/views/layout.html.twig
+++ b/src/Gh/GuestbookBundle/Resources/views/layout.html.twig
@@ -1,36 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{% block title %}Guest Book{% endblock %}</title>
+{% extends 'GhBlogBundle::layout.html.twig' %}
+{% block title %}Guest Book{% endblock %}
 {% block head %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="{{ asset('/css/bootstrap.css') }}" rel="stylesheet" media="screen">
+    {{ parent() }}
     {% stylesheets '@GhGuestbookBundle/Resources/public/css/*' filter='cssrewrite,?yui_css' output='css/compiled/ghguestbook.css' %}
         <link href="{{ asset_url }}" rel="stylesheet" media="screen" />
     {% endstylesheets %}
-    <!-- HTML5 Shim and Respond.js add IE8 support of HTML5 elements and media queries -->
-    {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}
 {% endblock %}
-</head>
-
-<body>
-{% block body_start %}
-{% endblock %}
-{% block header %}
-{% endblock %}
-{% block content %}
-{% endblock %}
-{% block footer %}
+{% block body %}
 {% endblock %}
 {% block before_body_end %}
-    <!-- jQuery (necessary for Bootstraps JavaScript plugins) -->
-    <script src="{{ asset('/js/jquery.js') }}"></script>
-    <!-- Include all JavaScripts, compiled by Assetic -->
-    <script src="{{ asset('/js/bootstrap.js') }}"></script>
+    {{ parent() }}
     {% javascripts '@GhGuestbookBundle/Resources/public/js/*' output='js/compiled/ghguestbook.js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
-</body>
-</html>
