--- a/src/Gh/GuestbookBundle/Resources/views/Message/show.html.twig
+++ b/src/Gh/GuestbookBundle/Resources/views/Message/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'GhGuestbookBundle::layout.html.twig' %}
 
-{% block content -%}
+{% block content %}
     <div id="wrap">
         <div class="container">
             <table class="table">
