--- a/src/Gh/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Gh/BlogBundle/Resources/views/layout.html.twig
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{{ asset('/css/bootstrap.css') }}" rel="stylesheet" media="screen">
-    {% stylesheets '@GhGuestbookBundle/Resources/public/css/*' filter='cssrewrite,?yui_css' output='css/compiled/ghguestbook.css' %}
+    {% stylesheets '@GhBlogBundle/Resources/public/css/*' filter='cssrewrite,?yui_css' output='css/compiled/ghblog.css' %}
         <link href="{{ asset_url }}" rel="stylesheet" media="screen" />
     {% endstylesheets %}
     <!-- HTML5 Shim and Respond.js add IE8 support of HTML5 elements and media queries -->
@@ -20,11 +20,27 @@
 {% block header %}
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-        Test
+        {{ knp_menu_render('mainNavbar', { 'style': 'navbar' }) }}
     </div>
 </div>
 {% endblock %}
 {% block content %}
+<div id="wrap">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <h1>{% block pageTitle %}{% endblock %}</h1>
+                {% block wrappedContent %}{% endblock %}
+            </div>
+            <div class="col-md-4">
+                {{ render(controller('GhBlogBundle:Post:recentPostsPartial')) }}
+                {{ render(controller('GhBlogBundle:Post:mostViewedPostsPartial')) }}
+                {{ render(controller('GhGuestbookBundle:Message:lastMessagesPartial')) }}
+                {{ render(controller('GhBlogBundle:Post:tagCloudPartial')) }}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 {% block footer %}
 {% endblock %}
@@ -33,7 +49,7 @@
     <script src="{{ asset('/js/jquery.js') }}"></script>
     <!-- Include all JavaScripts, compiled by Assetic -->
     <script src="{{ asset('/js/bootstrap.js') }}"></script>
-    {% javascripts '@GhBlogBundle/Resources/public/js/*' output='js/compiled/ghblog.js' %}
+    {% javascripts '@GhBlogBundle/Resources/public/js/*' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
