--- a/src/Gh/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Gh/BlogBundle/Resources/views/layout.html.twig
@@ -21,11 +21,21 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         {{ knp_menu_render('mainNavbar', { 'style': 'navbar' }) }}
-        <div class="pull-right search">
-            <form class="form-inline" role="form" action="{{ path('gh_blog_home') }}">
+        <div class="pull-right">
+            <form class=" search form-inline" role="form" action="{{ path('gh_blog_home') }}">
                 <input type="text" name="q" class="form-control" placeholder="Search" />
             </form>
         </div>
+        <ul class="nav navbar-nav navbar-right">
+            {% if app.user %}
+                <li><a href="{{ path('fos_user_profile_show') }}">{{ app.user.username }}</a></li>
+                <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+            {% else %}
+                <li><a href="{{ path('fos_user_security_login') }}">Login</a></li>
+                <li><a href="{{ path('fos_user_registration_register') }}">Register</a></li>
+            {% endif %}
+        </ul>
+
     </div>
 </div>
 {% endblock %}
