--- a/src/Gh/GuestbookBundle/Resources/views/Message/index.html.twig
+++ b/src/Gh/GuestbookBundle/Resources/views/Message/index.html.twig
@@ -7,23 +7,30 @@
                 {{ knp_pagination_render(pagination) }}
             </div>
             {{ form_start(createMessageForm, {attr: {class: 'create-message-form'}}) }}
-                <div class="form-group">
-                    <div class="col-sm-4">
-                        {{ form_widget(createMessageForm.name) }}
-                        {{ form_errors(createMessageForm.name) }}
+                {% if app.user %}
+                    <div class="hidden">
+                        {{ form_widget(createMessageForm.name, {value : app.user.username}) }}
+                        {{ form_widget(createMessageForm.email, {value : app.user.email}) }}
                     </div>
-                    <div class="col-sm-4">
-                        {{ form_widget(createMessageForm.email) }}
-                        {{ form_errors(createMessageForm.email) }}
+                {% else %}
+                    <div class="form-group">
+                        <div class="col-sm-4">
+                            {{ form_widget(createMessageForm.name) }}
+                            {{ form_errors(createMessageForm.name) }}
+                        </div>
+                        <div class="col-sm-4">
+                            {{ form_widget(createMessageForm.email) }}
+                            {{ form_errors(createMessageForm.email) }}
+                        </div>
+                        <div class="clearfix"></div>
                     </div>
-                    <div class="col-sm-4">
-                        {{ form_row(createMessageForm.submit) }}
-                    </div>
-                    <div class="clearfix"></div>
+                {% endif %}
+                <div class="col-sm-8">
+                    {{ form_row(createMessageForm.message) }}
                 </div>
-            <div class="col-sm-8">
-                {{ form_row(createMessageForm.message) }}
-            </div>
+                <div class="col-sm-4">
+                    {{ form_row(createMessageForm.submit) }}
+                </div>
             {{ form_end(createMessageForm) }}
         </div>
     </div>
